--- a/xcountry/src/component/card.css
+++ b/xcountry/src/component/card.css
@@ -1,20 +1,57 @@
-.card{
-    display: flex;
-    flex-direction: row;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.card-wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    column-gap: 2px;
-}
+
 .navbar {
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  
-  }
-  .searchbar{
-    width: 1000px;
-    border: 1px solid black;
-  }
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 60px;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.searchbar {
+  width: 800px;
+  border: 1px solid black;
+  outline: none;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  height: 30px;
+}
+
+.searchbar input:focus {
+  outline: 1px solid black; 
+}
+
+.countryclass {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.countryCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  border: 1px solid rgb(226, 220, 220);
+  border-radius: 8px;
+  margin: 10px;
+  padding: 10px;
+  width: 150px;
+  height: 150px;
+}
+
+.countryCard img {
+  max-height: 100px;
+  max-width: 100px;
+  padding: 8px;
+}
